--- a/DelDogzadatak/DelDogzadatak.csproj
+++ b/DelDogzadatak/DelDogzadatak.csproj
@@ -45,8 +45,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Rezultat.cs" />
-    <Compile Include="Utakmica.cs" />
+    <Compile Include="Semafor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
